# liealg

./: Cargo.toml  readme.md
.github/workflows/: checks.yml  publish.yml
examples/: adjoint_act.rs  main.rs  mat_act.rs  mat_inv.rs  mat_mul.rs  rigid.rs  rotation.rs
src/: impl_approx.rs  impl_clone.rs  lib.rs  point.rs  utils.rs
src/rigid/: adjoint.rs  algebra.rs  group.rs  mod.rs  vector.rs
src/rot/: adjoint.rs  algebra.rs  group.rs  mod.rs  vector.rs
