[package]
name = "liealg"
version = "0.3.0"
edition = "2021"
description = "lie group and lie algebra in rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/geshengpsn/liealg"
readme = "readme.md"
documentation = "https://docs.rs/liealg"
keywords = ["math", "algebra", "robotics"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.33.0"
num-traits = "0.2.19"
approx = "0.5.1"
